--- a/_quarto.yml
+++ b/_quarto.yml
@@ -40,17 +40,17 @@ website:
       - href: content/sensors.qmd
         text: Sensors
       - href: content/gliderRodeo.qmd
-        text: In-Water Testing
+        text: Field Testing
       - href: content/shipSurveys.qmd
-        text: Shipboard & Glider Surveys
+        text: Ship & Glider Surveys
+      - href: content/modeling.qmd
+        text: Spatial Modeling
       - href: content/transitionPlan.qmd
         text: Transition Plan
       # - href: content/p2w.qmd
       #   text: Plankton to Whales
       - href: content/infoSharing.qmd
         text: Information Sharing
-      - href: content/modeling.qmd
-        text: Spatial Modeling
       - href: content/contact.qmd
         text: Contact Us
 
