--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,7 +7,7 @@ website:
   site-url: "https://nmfs-pam-glider.github.io/PAM-UxS/" 
   repo-url: "https://github.com/NMFS-PAM-Glider/PAM-UxS"
   repo-actions: [edit, source, issue]
-  favicon: images/favicon.ico
+  favicon: content/images/GliderRodeo.png
   
   page-footer:
     right: "This page is built with [Quarto](https://quarto.org/)."
@@ -16,7 +16,7 @@ website:
   sidebar:
     background: "#D9E3E4"
     logo: "https://raw.githubusercontent.com/nmfs-opensci/assets/main/logo/nmfs-opensci-logo3.png"
-    favicon: images/favicon.ico
+    favicon: favicon.ico
     pinned: true
     align: center
     tools: 
