add soundscape page
Add page for soundscape analysis

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -43,6 +43,8 @@ website:
         text: Field Testing
       - href: content/shipSurveys.qmd
         text: Ship & Glider Surveys
+      - href: content/gliderSoundscapes.qmd
+        text: Soundscapes
       - href: content/modeling.qmd
         text: Spatial Modeling
       - href: content/transitionPlan.qmd
