--- a/_quarto.yml
+++ b/_quarto.yml
@@ -37,7 +37,7 @@ website:
         text: About Us
         contents: Resources
         - href: content/glider-labs.qmd
-          text: Glider Labs
+          text: NMFS Glider Labs
         - href: content/gliders.qmd
           text: Gliders
         - href: content/sensors.qmd
@@ -48,8 +48,8 @@ website:
         text: Ship & Glider Surveys
       - href: content/gliderSoundscapes.qmd
         text: Soundscapes
-      - href: content/modeling.qmd
-        text: Spatial Modeling
+      # - href: content/modeling.qmd
+      #   text: Spatial Modeling
       - href: content/transitionPlan.qmd
         text: Transition Plan
       # - href: content/p2w.qmd
