Added data pre-processing methods

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -55,10 +55,29 @@ website:
         text: Transition Plan
       # - href: content/p2w.qmd
       #   text: Plankton to Whales
+      - section: Analysis Methods
+        contents: 
+          - section: Data Pre-Processing
+            contents: 
+            - href: content/data_processing/seaglider-wispr2.qmd
+              text: Seaglider - WISPR 2
+            - href: content/data_processing/seaglider-wispr3.qmd
+              text: Seaglider - WISPR 3
+            - href: content/data_processing/seaglider-pmar-xl.qmd
+              text: Seaglider - PMAR XL
+            - href: content/data_processing/slocum-wispr3.qmd
+              text: Slocum - WISPR 3
+            - href: content/data_processing/slocum-dmon2.qmd
+              text: Slocum - DMON 2
+            - href: content/data_processing/oceanscout-wispr6.qmd
+              text: Oceanscout - WISPR 6.1
+            - href: content/data_processing/alseamar.qmd
+              text: Alseamar
       - href: content/infoSharing.qmd
         text: Information Sharing
       - href: content/contact.qmd
         text: Contact Us
+      - href: content/data_processing/test.qmd
 
 format:
   html:
