--- a/.github/ISSUE_TEMPLATE/New-Seaglider-WISPR-Data.yml
+++ b/.github/ISSUE_TEMPLATE/New-Seaglider-WISPR-Data.yml
@@ -7,11 +7,6 @@ assignees:
   - Kourtney-Burger
   - sfregosi-noaa
 body:
-  - type: markdown
-    attributes:
-      value: |
-        Press the green 'Create' button below to create this issue template with the data pre-processing steps that need to be completed with each new PAM glider dataset
-
   - type: input
     id: dataset-name
     attributes:
@@ -20,7 +15,15 @@ body:
       placeholder: e.g., sg679_Aug2024
     validations: 
       required: true
-  
+      
+  - type: textarea
+    id: instructions
+    attributes:
+      label: Instructions
+      description: Pre-processing instructions and method links
+      value: |
+        Press the green 'Create' button below to create this issue template with the data pre-processing steps for each new PAM glider dataset. More detail on these methods can be found [here](https://nmfs-ost.github.io/PAM-Glider/content/data_processing/seaglider-wispr2.html)
+
   - type: checkboxes
     id: checklist_Offload-Data
     attributes:
