--- a/.github/ISSUE_TEMPLATE/New-Slocum-WISPR-Data.yml
+++ b/.github/ISSUE_TEMPLATE/New-Slocum-WISPR-Data.yml
@@ -1,6 +1,6 @@
-name: New Seaglider WISPR Data
-description: Data pre-processing steps for new, incoming PAM data from Seagliders with WISPR recording systems. 
-title: "New Seaglider WISPR Data: [INSERT DEPLOYMENT ID HERE]"
+name: New Slocum WISPR Data
+description: Data pre-processing steps for new, incoming PAM data from Slocums with WISPR recording systems. 
+title: "New Slocum WISPR Data: [INSERT DEPLOYMENT ID HERE]"
 labels: ["new data"]
 #projects: ["PAM SI]
 assignees:
@@ -12,7 +12,7 @@ body:
     attributes:
       label: Deployment ID
       description: Deployment ID from deployment tracker 
-      placeholder: e.g., sg679_Aug2024
+      placeholder: e.g., stenella-20250414
     validations: 
       required: true
       
@@ -22,7 +22,7 @@ body:
       label: Instructions
       description: Pre-processing instructions and method links
       value: |
-        Press the green 'Create' button below to create this issue template with the data pre-processing steps for each new PAM glider dataset. More detail on these methods can be found [here](https://nmfs-ost.github.io/PAM-Glider/content/data_processing/seaglider-wispr2.html)
+        Press the green 'Create' button below to create this issue template with the data pre-processing steps for each new PAM glider dataset. More detail on these methods can be found [here](https://nmfs-ost.github.io/PAM-Glider/content/data_processing/slocum-wispr3.html)
 
   - type: checkboxes
     id: checklist_Offload-Data
@@ -41,7 +41,7 @@ body:
       label: Decimation and LTSAs
       description: Use Matlab to create full bandwith longterm spectral average and decimate for low frequency data analysis
       options:
-        - label: Create LTSA with 5 seconds and 200 Hz settings, save LTSA as DeploymentID_SamplingRate_5s_200Hz.ltsa (ex. sg639_Sep2024_200kHz_5s_200Hz.ltsa)
+        - label: Create LTSA with 5 seconds and 200 Hz settings, save LTSA as DeploymentID_SamplingRate_5s_200Hz.ltsa (ex. stenella-20250414_200kHz_5s_200Hz.ltsa)
         - label: Download decimatedir.m Matlab script and decimate to 500 Hz 
 
   - type: checkboxes
