--- a/.github/ISSUE_TEMPLATE/New-Seaglider-WISPR-Data.yml
+++ b/.github/ISSUE_TEMPLATE/New-Seaglider-WISPR-Data.yml
@@ -61,3 +61,4 @@ body:
         - label: Open Glider Deployment Tracker Spreadsheet and ensure all fields have been completed
         - label: Use the full bandwidth LTSA to mark the data start and end (or use file timestamps) and assess overall data quality 
         - label: Use acoustic effort summary to fill in the deployment duration, distance, and recording duration
+        - label: Create [post mission summary report](https://docs.google.com/document/d/1n_gStQKpFswIsa8mMzGJQ2-xDK0fJE_6092rQl4_PAo/edit?usp=sharing)
