--- a/_quarto.yml
+++ b/_quarto.yml
@@ -43,7 +43,7 @@ website:
           text: Gliders
         - href: content/sensors.qmd
           text: Sensors
-      - href: content/gliderRodeo.qmd
+      - href: content/glider-FieldTesting.qmd
         text: Field Testing
       - href: content/shipSurveys.qmd
         text: Ship & Glider Surveys
@@ -57,7 +57,7 @@ website:
       #   text: Plankton to Whales
       - section: Analysis Methods
         contents: 
-          - section: content/data_processing/data-preprocessing.qmd
+          - section: content/data_processing/AcousticData-preprocessing.qmd
             contents: 
             - href: content/data_processing/seaglider-wispr.qmd
               text: Seaglider - WISPR
@@ -71,6 +71,8 @@ website:
               text: Oceanscout - WISPR 6.1
             - href: content/data_processing/alseamar.qmd
               text: Alseamar
+          - href: content/data_processing/EnvData-processing.qmd
+          - href: content/data_processing/DeploymentSummaries.qmd
       - href: content/infoSharing.qmd
         text: Information Sharing
       - href: content/contact.qmd
